菜品详细画面

--- a/public/src/theme/css/style.less
+++ b/public/src/theme/css/style.less
@@ -133,3 +133,13 @@ pre {
 input.scrollable-header {
   border-bottom: 3px solid #ccc;
 }
+
+.foodop-num {
+  font-size: 25px;
+}
+.add-food {
+  font-size: 25px;
+}
+.remove-food {
+  font-size: 25px;
+}
