--- a/views/index.html
+++ b/views/index.html
@@ -13,10 +13,14 @@
     <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-hover.css" />
     <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-base.css" />
     <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-desktop.css" />
+    <link rel="stylesheet" href="public/src/vendor/dist/font-awesome/cssfont-awesome.min.css" />
     <link rel="stylesheet" href="./public/dist/css/style.css"/>
 
     <script type="text/javascript" src="../public/dist/js/reserveLoad.min.js"></script>
 
+    <style>
+
+    </style>
 </head>
 <body ng-app="jsEasy" ng-controller="MainController">
 
