--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
     <div class="navbar navbar-app navbar-absolute-bottom">
         <div class="btn-group justified">
             <a href="/" class="btn btn-navbar">
-                <i class="fa fa-home fa-navbar"></i>菜品
+                <i class="fa fa-home fa-navbar"></i>菜品1
             </a>
             <a href="/" class="btn btn-navbar">
                 <i class="fa fa-home fa-navbar"></i>订单
