--- a/public/src/theme/css/response.less
+++ b/public/src/theme/css/response.less
@@ -1,6 +1,6 @@
 @media (min-width: 320px) {
   .r-food-list-item {
-    width: 160px;
+    width: 50%;
     float: left;
     margin: 0px;
     padding: 2px;
