--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-hover.css" />
     <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-base.css" />
     <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-desktop.css" />
-    <link rel="stylesheet" href="public/src/vendor/dist/font-awesome/cssfont-awesome.min.css" />
 
     <link rel="stylesheet" href="public/dist/css/style.css"/>
     <link rel="stylesheet" href="public/dist/css/response.css"/>
@@ -37,18 +36,14 @@
 
     <div class="navbar navbar-app navbar-absolute-top">
         <div class="navbar-brand navbar-brand-center" yield-to="title">
-            {{title || "宅语菜园"}}
+            宅语菜园
         </div>
         <div class="btn-group pull-left">
             <div ui-toggle="sidebarLeft" class="btn sidebar-toggle">
                 <i class="fa fa-bars"></i>菜单
             </div>
         </div>
-        <div class="btn-group pull-right" yield-to="navbarAction">
-            <a href="#/forms" class="btn btn-navbar">
-                <i class="fa fa-exclamation-circle fa-navbar"></i>筛选
-            </a>
-        </div>
+
     </div>
 
     <div class="navbar navbar-app navbar-absolute-bottom">
