--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="yes"/>
-
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
     <link rel="stylesheet" href="public/src/libs/dist/css/mobile-angular-ui-hover.css" />
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="public/dist/css/style.css"/>
     <link rel="stylesheet" href="public/dist/css/response.css"/>
-    <script type="text/javascript" src="../public/dist/js/reserveLoad.min.js"></script>
+    <script type="text/javascript" src="public/dist/js/reserveLoad.min.js"></script>
 
     <style>
 
@@ -42,6 +42,8 @@
             <div ui-toggle="sidebarLeft" class="btn sidebar-toggle">
                 <i class="fa fa-bars"></i>菜单
             </div>
+        </div>
+        <div class="navbar-brand pull-right" yield-to="right">
         </div>
 
     </div>
