--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
             <a href="/" class="btn btn-navbar">
                 <i class="fa fa-home fa-navbar"></i>菜品
             </a>
-            <a href="/" class="btn btn-navbar">
+            <a href="/order" class="btn btn-navbar">
                 <i class="fa fa-home fa-navbar"></i>订单
             </a>
 
